; ModuleID = '/home/carl/AnghaBench/freebsd/sys/powerpc/mpc85xx/extr_platform_mpc85xx.c_mpc85xx_smp_first_cpu.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/powerpc/mpc85xx/extr_platform_mpc85xx.c_mpc85xx_smp_first_cpu.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cpuref = type { i32, i32 }

@cpu = common dso_local global i32 0, align 4
@bootverbose = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [33 x i8] c"powerpc_smp_first_cpu: cpuid %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, %struct.cpuref*)* @mpc85xx_smp_first_cpu to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mpc85xx_smp_first_cpu(i32 %0, %struct.cpuref* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.cpuref*, align 8
  store i32 %0, i32* %3, align 4
  store %struct.cpuref* %1, %struct.cpuref** %4, align 8
  store i32 0, i32* @cpu, align 4
  %5 = load i32, i32* @cpu, align 4
  %6 = load %struct.cpuref*, %struct.cpuref** %4, align 8
  %7 = getelementptr inbounds %struct.cpuref, %struct.cpuref* %6, i32 0, i32 0
  store i32 %5, i32* %7, align 4
  %8 = load %struct.cpuref*, %struct.cpuref** %4, align 8
  %9 = getelementptr inbounds %struct.cpuref, %struct.cpuref* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.cpuref*, %struct.cpuref** %4, align 8
  %12 = getelementptr inbounds %struct.cpuref, %struct.cpuref* %11, i32 0, i32 1
  store i32 %10, i32* %12, align 4
  %13 = load i64, i64* @bootverbose, align 8
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %20

15:                                               ; preds = %2
  %16 = load %struct.cpuref*, %struct.cpuref** %4, align 8
  %17 = getelementptr inbounds %struct.cpuref, %struct.cpuref* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @printf(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str, i64 0, i64 0), i32 %18)
  br label %20

20:                                               ; preds = %15, %2
  %21 = load i32, i32* @cpu, align 4
  %22 = add nsw i32 %21, 1
  store i32 %22, i32* @cpu, align 4
  ret i32 0
}

declare dso_local i32 @printf(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
